solucion cache estilos

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -547,7 +547,7 @@ body {
   padding-top: 26px;
 }
 .redes .redes_int .cajaRedes2 {
-  float: right;
+  float: left;
   height: 118px;
   width: 159px;
   padding-left:30px;
